--- a/index.html
+++ b/index.html
@@ -50,37 +50,69 @@
                 </div>
                 <ul class="shop">
                     <li class="card">
-                        <img src="assets/images/Pang.png" alt="#">
+                        <img src="assets/images/Pang.png" alt="Hang">
                         <div>
                             <span>
                                 <h3>Hang</h3>
                                 <p> Découvrez les sonorités apaisantes du hang, un instrument mélodique captivant. Parfait pour créer une atmosphère paisible et méditative.</p>
                             </span>
-                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt=""></a>
+                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt="Mettre dans le panier"></a>
                         </div>                        
                     </li>
                     <li class="card">
-                        <img src="assets/images/Djembe-Drum.jpg" alt="#">
+                        <img src="assets/images/Djembe-Drum.jpg" alt="Djembé">
                         <div>
                             <span><h3>Djembé</h3>
                             <p> Découvrez la puissance de percussion du Djembé, un instrument captivant. Parfait pour créer une atmosphère dynamique et energique.</p></span>
-                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt=""></a>
+                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt="Mettre dans le panier"></a>
                         </div>                        
                     </li>
                     <li class="card">
-                        <img src="assets/images/guzhen.jpg" alt="#">
+                        <img src="assets/images/guzhen.jpg" alt="Gu zhen">
                         <div>
                             <span><h3>Gu zhen</h3>
                             <p> Découvrez la douceur du Gu zhen, un instrument intriguant. Idéal pour émouvoir les foules grâce a sa mélodie incroyable.</p></span>
-                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt=""></a>
+                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt="Mettre dans le panier"></a>
                         </div>                        
                     </li>
                     <li class="card">
-                        <img src="assets/images/kora.png" alt="#">
+                        <img src="assets/images/kora.png" alt="Kora">
                         <div>
                             <span><h3>Kora</h3>
-                            <p>Plongez dans la tradition musicale africaine avec nos koras artisanales. Fabriquées avec expertise, ces instruments à cordes vous transporteront vers des sonorités envoûtantes.</p></span>
-                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt=""></a>
+                            <p>Plongez dans la tradition africaine avec nos koras, fabriquées avec expertise. Ces instruments vous transporteront vers des sonorités envoûtantes.</p></span>
+                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt="Mettre dans le panier"></a>
+                        </div>                        
+                    </li>
+                    <li class="card">
+                        <img src="assets/images/Charango.jpg" alt="Charango">
+                        <div>
+                            <span><h3>Charango</h3>
+                            <p>Plongez dans les sonorités des Andes avec notre collection de charangos. Ces instruments à cordes offrent des mélodies captivantes et uniques.</p></span>
+                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt="Mettre dans le panier"></a>
+                        </div>                        
+                    </li>
+                    <li class="card">
+                        <img src="assets/images/tabla.png" alt="Tabla">
+                        <div>
+                            <span><h3>Tabla</h3>
+                            <p>Explorez les rythmes complexes de l'Inde avec nos tablas de qualité. Parfaites pour ceux qui recherchent des percussions authentiques.</p></span>
+                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt="Mettre dans le panier"></a>
+                        </div>                        
+                    </li>
+                    <li class="card">
+                        <img src="assets/images/Santur.jpg" alt="Santur">
+                        <div>
+                            <span><h3>Santur</h3>
+                            <p> Découvrez la beauté des mélodies du santur. Des instruments à cordes raffinés parfait pour explorer la richesse de la musique traditionnelle.</p></span>
+                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt="Mettre dans le panier"></a>
+                        </div>                        
+                    </li>
+                    <li class="card">
+                        <img src="assets/images/didgeridoo.png" alt="Didgeridoo">
+                        <div>
+                            <span><h3>Didgeridoo</h3>
+                            <p>Voyagez à travers notre collection, fabriqués à partir de matériaux authentiques. Ces instruments à vent offrent des vibrations uniques et vibrantes.</p></span>
+                            <a class="button white" href="#"><img src="assets/icons/cart.svg" alt="Mettre dans le panier"></a>
                         </div>                        
                     </li>
                 </ul>
@@ -92,9 +124,9 @@
                 <div>
                     <p><h3>Promesses</h3>
                         <ul>
-                            <li>Sélection éclectique d'instruments du monde</li>
-                            <li>Conseils personnalisés de nos experts passionnés</li>
-                            <li>Ambiance accueillante pour une expérience de shopping authentique</li>
+                            <li>Sélection variée d'instruments</li>
+                            <li>Conseils personnalisés de nos experts</li>
+                            <li>Ambiance accueillante pour une expérience authentique</li>
                         </ul>
                     </p>
                 </div>
