--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav>
             <a href="index.html"><img src="assets/icons/timpani.svg" alt="logo"></a>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="#instruments">Instruments</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#avis">Avis</a></li>
+                <li><a class="navlink" href="index.html">Accueil</a></li>
+                <li><a class="navlink" href="#instruments">Instruments</a></li>
+                <li><a class="navlink" href="#services">Services</a></li>
+                <li><a class="navlink" href="#avis">Avis</a></li>
             </ul>
         </nav>
         <main>
